[gd_scene load_steps=3 format=3 uid="uid://do0gv7fs1aegr"]

[ext_resource type="Script" path="res://scenes/ui/join_menu/join_menu.gd" id="1_o0flq"]
[ext_resource type="Script" path="res://addons/LANServerBroadcast/server_listener/ServerListener.gd" id="2_07ghn"]

[node name="JoinMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o0flq")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.352941, 0.352941, 0.443137, 1)

[node name="InputsContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -361.0
offset_top = -92.0
offset_right = 361.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20

[node name="UsernameContainer" type="VBoxContainer" parent="InputsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="UsernameLabel" type="Label" parent="InputsContainer/UsernameContainer"]
layout_mode = 2
text = "Login"

[node name="UsernameInput" type="LineEdit" parent="InputsContainer/UsernameContainer"]
custom_minimum_size = Vector2(2.08165e-12, 32)
layout_mode = 2

[node name="AddressContainer" type="VBoxContainer" parent="InputsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AddressLabel" type="Label" parent="InputsContainer/AddressContainer"]
layout_mode = 2
text = "Adres IP hosta"

[node name="AddressInput" type="LineEdit" parent="InputsContainer/AddressContainer"]
custom_minimum_size = Vector2(2.08165e-12, 32)
layout_mode = 2
text = "localhost"

[node name="PortContainer" type="VBoxContainer" parent="InputsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PortLabel" type="Label" parent="InputsContainer/PortContainer"]
layout_mode = 2
text = "Port"

[node name="PortInput" type="LineEdit" parent="InputsContainer/PortContainer"]
layout_mode = 2
text = "9001"

[node name="JoinButton" type="Button" parent="InputsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Dołącz do gry"

[node name="ServerList" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 46.0
offset_top = 41.0
offset_right = 1224.0
offset_bottom = 594.0

[node name="ServerListener" type="Node" parent="."]
script = ExtResource("2_07ghn")

[connection signal="button_down" from="InputsContainer/JoinButton" to="." method="_on_join_button_button_down"]
[connection signal="new_server" from="ServerListener" to="." method="_on_server_listener_new_server"]
[connection signal="remove_server" from="ServerListener" to="." method="_on_server_listener_remove_server"]
